--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "author": "Jakub Synowiec <jsynowiec@users.noreply.github.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@project-serum/anchor": "^0.24.2",
+    "@solana/web3.js": "^1.43.1",
     "tslib": "~2.3.1"
   },
   "volta": {
