--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   "dependencies": {
     "@project-serum/anchor": "^0.24.2",
     "@solana/web3.js": "^1.43.1",
+    "bs58": "^5.0.0",
+    "hedge-web3": "^0.2.16",
     "tslib": "~2.3.1"
   },
   "volta": {
